[gd_scene load_steps=13 format=3 uid="uid://c2vj8iieavrjq"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_h0vy6"]
[ext_resource type="Texture2D" uid="uid://davohfpx14c4c" path="res://Art/background_1.png" id="2_pj64d"]
[ext_resource type="Theme" uid="uid://dgvf5d60po1mx" path="res://hrader_theme.tres" id="3_pv4ha"]
[ext_resource type="Theme" uid="uid://dgq05x8j4ybyk" path="res://sub_theme.tres" id="4_3gmfs"]
[ext_resource type="Texture2D" uid="uid://befkg61op535i" path="res://Art/game_logo.png" id="4_f0odg"]
[ext_resource type="Texture2D" uid="uid://c4wjofiq4df8m" path="res://Art/filmstrip.png" id="5_6vrnr"]
[ext_resource type="AudioStream" uid="uid://clbxby2cmdju3" path="res://SFX/sfx_tick.wav" id="6_g0hsw"]
[ext_resource type="AudioStream" uid="uid://5mmh1uf6e11p" path="res://SFX/sfx_no_match.wav" id="7_xm86l"]
[ext_resource type="AudioStream" uid="uid://cpm2tr1tlk41" path="res://SFX/sfx_not_set.wav" id="8_xgssw"]
[ext_resource type="AudioStream" uid="uid://ijs0gtrkj735" path="res://Music/bgm_retro_menu.ogg" id="9_iea28"]

[sub_resource type="Animation" id="Animation_uf7rc"]
resource_name = "title_anim"
length = 4.0
loop_mode = 1
step = 0.2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(35, -0.25, 0, 1, -4, 8, -1, 0, 1, 4, 35, -1, -3, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vmlv7"]
_data = {
"title_anim": SubResource("Animation_uf7rc")
}

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0vy6")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 900.0
offset_bottom = 800.0
texture = ExtResource("2_pj64d")
stretch_mode = 1

[node name="Title" type="TextureRect" parent="."]
layout_mode = 0
offset_top = 35.0
offset_right = 900.0
offset_bottom = 284.0
theme = ExtResource("3_pv4ha")
texture = ExtResource("4_f0odg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Title"]
autoplay = "title_anim"
libraries = {
"": SubResource("AnimationLibrary_vmlv7")
}

[node name="Sub" type="Label" parent="."]
layout_mode = 0
offset_top = 350.0
offset_right = 900.0
offset_bottom = 410.0
theme = ExtResource("4_3gmfs")
text = "Enter your name"
horizontal_alignment = 1

[node name="Entry_BG" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -150.0
offset_top = 420.0
offset_right = 1050.0
offset_bottom = 480.0
texture = ExtResource("5_6vrnr")
expand_mode = 1

[node name="Entry" type="Label" parent="."]
layout_mode = 0
offset_top = 420.0
offset_right = 900.0
offset_bottom = 480.0
theme = ExtResource("4_3gmfs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="End" type="Label" parent="."]
layout_mode = 0
offset_top = 720.0
offset_right = 900.0
offset_bottom = 780.0
theme = ExtResource("4_3gmfs")
text = "Press ENTER to start"
horizontal_alignment = 1

[node name="sfx_tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_g0hsw")

[node name="sfx_back" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_xm86l")
volume_db = -8.0

[node name="sfx_nope" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_xgssw")

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_iea28")
volume_db = -8.0
autoplay = true
